[workspace]
members = ["crates/lib/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
axon_basic_types = {path = "crates/lib/basic_types"}

vlog = {path = "crates/lib/vlog"}

chrono = "0.4"
tracing = "0.1"
alloy-primitives = "0.5"

serde_json = "1.0"
serde = "1.0"