[package]
name = "axon_crypto"
version.workspace = true
edition.workspace = true

[dependencies]
axon_primitives = { workspace = true }

serde = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
sha2 = { workspace = true }
blake2 = { workspace = true }

hex = "0.4"
base64 = "0.21"
