[package]
name = "axon_primitives"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"]}
serde_json = { workspace = true }
alloy-primitives = { workspace = true, features = ["serde"]}
sha2 = { workspace = true }
blake2 = { workspace = true }