[package]
name = "axon_storage"
version.workspace = true
edition.workspace = true

[dependencies]
vetric.workspace = true

once_cell = { workspace = true }
tracing = { workspace = true }

num_cpus = "1.16"
rocksdb = { version = "0.21", default-features = false, features = ["snappy"] }

[dev-dependencies]
tempfile = "3.8"
