[package]
name = "axon_utils"
version.workspace = true
edition.workspace = true

[dependencies]
axon_primitives.workspace = true
vlog.workspace = true

serde = { workspace = true }
tokio = { workspace = true, features = ["time"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
alloy-sol-types = { workspace = true }

num = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking"] }
itertools = "0.12"

zkvm_opcodes = { git = "ssh://git@github.com/neurons-labs/axon-vm.git" }

[dev-dependencies]
serde_json = { workspace = true }
